# scipion-em-miffi

./: CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: publish_and_tag.yml
miffi/: __init__.py  bibtex.py  constants.py  protocols.conf
miffi/protocols/: __init__.py  protocol_miffi.py
miffi/tests/: __init__.py  test_protocols_miffi.py
miffi/viewers/: __init__.py  viewer.py
miffi/wizards/: __init__.py  wizard_miffi.py
